--- a/FrontEndDeveloper/clase-01.html
+++ b/FrontEndDeveloper/clase-01.html
@@ -27,10 +27,7 @@
         }
 
         body{
-            font-family: 'Quicksand', sans-serif;;
-        }
-
-        body{
+            font-family: 'Quicksand', sans-serif;
             margin: 0;
         }
 
