--- a/JS-guia/app.html
+++ b/JS-guia/app.html
@@ -7,8 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-   <script src="./assets/js/app.js"></script> 
-   <script src="./assets/js/alert.js"></script>
+  <!-- <script src="./assets/js/app.js"></script>  
+   <script src="./assets/js/alert.js"></script> 
+   <script src="./assets/js/primitivos.js"></script> --> 
+   <script src="./assets/js/palabras-resevadas.js"></script>
 </body>
 </script>
 </html>
