funciones en JS

--- a/JS-guia/app.html
+++ b/JS-guia/app.html
@@ -9,8 +9,11 @@
 <body>
   <!-- <script src="./assets/js/app.js"></script>  
    <script src="./assets/js/alert.js"></script> 
-   <script src="./assets/js/primitivos.js"></script> --> 
-   <script src="./assets/js/palabras-resevadas.js"></script>
+   <script src="./assets/js/primitivos.js"></script> 
+   <script src="./assets/js/palabras-resevadas.js"></script> 
+   <script src="./assets/js/arreglo2.js"></script> 
+   <script src="./assets/js/objeto-literal.js"></script>-->
+   <script src="./assets/js/funciones.js"></script>
 </body>
 </script>
 </html>
