--- a/FrontEndDeveloper/clase-02.html
+++ b/FrontEndDeveloper/clase-02.html
@@ -121,38 +121,16 @@
                 class="logo"
             >
             <h1 class="title">
-                Create a New Password
+                Email has been sent!
             </h1>
             <p class="subtitle">
-                Enter a new password for you account
+                Please check your i
             </p>
-            <form action="#"  class="form">
-                <label for="password" class="label">
-                    Password
-                </label>
-                <input 
-                    type="password" 
-                    id="password"
-                    placeholder="*********"
-                    class="input input-password"
-                > 
-
-                <label for="new-password"  class="label">
-                    Re-enter password
-                </label>
-                <input 
-                    type="password"
-                    id="new-password"
-                    placeholder="*********"
-                    class="input input-password"                
-                >
-
-                <input 
-                    type="submit" 
-                    value="Confirm" 
-                    class="primary-button login-button"
-                >
-            </form>
+            <div class="email image">
+                <img 
+                    src="./icons/email.svg"
+                    alt="">
+            </div>
         </div>
     </div>
 </body>
