--- a/JS-guia/app.html
+++ b/JS-guia/app.html
@@ -12,8 +12,9 @@
    <script src="./assets/js/primitivos.js"></script> 
    <script src="./assets/js/palabras-resevadas.js"></script> 
    <script src="./assets/js/arreglo2.js"></script> 
-   <script src="./assets/js/objeto-literal.js"></script>-->
-   <script src="./assets/js/funciones.js"></script>
+   <script src="./assets/js/objeto-literal.js"></script>
+   <script src="./assets/js/funciones.js"></script>-->
+   <script src="./assets/js/protip-retorno.js"></script>
 </body>
 </script>
 </html>
