--- a/JS-guia/app.html
+++ b/JS-guia/app.html
@@ -13,8 +13,9 @@
    <script src="./assets/js/palabras-resevadas.js"></script> 
    <script src="./assets/js/arreglo2.js"></script> 
    <script src="./assets/js/objeto-literal.js"></script>
-   <script src="./assets/js/funciones.js"></script>-->
-   <script src="./assets/js/protip-retorno.js"></script>
+   <script src="./assets/js/funciones.js"></script>
+   <script src="./assets/js/protip-retorno.js"></script>-->
+   <script src="./assets/js/valor-referencia.js"></script>
 </body>
 </script>
 </html>
