--- a/JS-guia/app.html
+++ b/JS-guia/app.html
@@ -16,8 +16,11 @@
    <script src="./assets/js/funciones.js"></script>
    <script src="./assets/js/protip-retorno.js"></script>
    <script src="./assets/js/valor-referencia.js"></script>
-   <script src="./assets/js/if-else.js"></script>-->
+   <script src="./assets/js/if-else.js"></script>
    <script src="./assets/js/logica-booleana.js"></script>
+   <script src="./assets/js/operador-ternario.js"></script>
+   <script src="./assets/js/protip-retorno.js"></script>-->
+   <script src="./assets/js/protip-ternario.js"></script>
 </body>
 </script>
 </html>
