chmod: pedir carta y mostrar el valor

--- a/JS-guia/02-blackjack/index.html
+++ b/JS-guia/02-blackjack/index.html
@@ -36,9 +36,6 @@
             </h1>
             <div id="jugador-cartas">
                 <img class="carta" src="./assets/cartas/10C.png" alt="">
-                <img class="carta" src="./assets/cartas/10C.png" alt="">
-                <img class="carta" src="./assets/cartas/10C.png" alt="">
-                <img class="carta" src="./assets/cartas/10C.png" alt="">
             </div>
         </div>
     </div>
@@ -50,13 +47,11 @@
             </h1>
             <div id="computadora-cartas">
                 <img class="carta" src="./assets/cartas/10C.png" alt="">
-                <img class="carta" src="./assets/cartas/10C.png" alt="">
-                <img class="carta" src="./assets/cartas/10C.png" alt="">
-                <img class="carta" src="./assets/cartas/10C.png" alt="">
             </div>
         </div>
     </div>
 
+    <script src="./assets/js/underscore-min.js"></script>
     <script src="./assets/js/juego.js"></script>
 </body>
 </html>
