mod: crear cartas en el juego

--- a/JS-guia/02-blackjack/index.html
+++ b/JS-guia/02-blackjack/index.html
@@ -16,14 +16,14 @@
     </header>
 
     <div class="row mt-2">
-        <div class="col text-center">
-            <button class="btn btn-danger">
+        <div class="col text-center"  id="botones">
+            <button id="btn-Nuevo" class="btn btn-danger">
                 Nuevo Juego
             </button>
-            <button class="btn btn-primary">
+            <button id="btnPedir" class="btn btn-primary">
                 Pedir Carta
             </button>
-            <button class="btn btn-primary">
+            <button id="btnDetener"  class="btn btn-primary">
                 Detener
             </button>
         </div>
@@ -35,7 +35,9 @@
                 Jugador 1 - <small> 0 </small>
             </h1>
             <div id="jugador-cartas">
+                <!-- 
                 <img class="carta" src="./assets/cartas/10C.png" alt="">
+                -->
             </div>
         </div>
     </div>
@@ -43,7 +45,7 @@
     <div class="row container">
         <div class="col">
             <h1>
-                Computadora - <small> 3 </small>
+                Computadora - <small> 0 </small>
             </h1>
             <div id="computadora-cartas">
                 <img class="carta" src="./assets/cartas/10C.png" alt="">
