mod: terminando el juego blackjack

--- a/JS-guia/02-blackjack/index.html
+++ b/JS-guia/02-blackjack/index.html
@@ -17,7 +17,7 @@
 
     <div class="row mt-2">
         <div class="col text-center"  id="botones">
-            <button id="btn-Nuevo" class="btn btn-danger">
+            <button id="btnNuevo" class="btn btn-danger">
                 Nuevo Juego
             </button>
             <button id="btnPedir" class="btn btn-primary">
@@ -48,7 +48,9 @@
                 Computadora - <small> 0 </small>
             </h1>
             <div id="computadora-cartas">
+                <!-- 
                 <img class="carta" src="./assets/cartas/10C.png" alt="">
+                -->
             </div>
         </div>
     </div>
