mod: juego terminado

--- a/JS-guia/02-blackjack/index.html
+++ b/JS-guia/02-blackjack/index.html
@@ -20,10 +20,10 @@
             <button id="btnNuevo" class="btn btn-danger">
                 Nuevo Juego
             </button>
-            <button id="btnPedir" class="btn btn-primary">
+            <button id="btnPedir" class="btn btn-primary" disabled="disabled">
                 Pedir Carta
             </button>
-            <button id="btnDetener"  class="btn btn-primary">
+            <button id="btnDetener"  class="btn btn-primary" disabled="disabled">
                 Detener
             </button>
         </div>
@@ -34,7 +34,7 @@
             <h1>
                 Jugador 1 - <small> 0 </small>
             </h1>
-            <div id="jugador-cartas">
+            <div id="jugador-cartas" class="divCartas">
                 <!-- 
                 <img class="carta" src="./assets/cartas/10C.png" alt="">
                 -->
@@ -47,7 +47,7 @@
             <h1>
                 Computadora - <small> 0 </small>
             </h1>
-            <div id="computadora-cartas">
+            <div id="computadora-cartas" class="divCartas">
                 <!-- 
                 <img class="carta" src="./assets/cartas/10C.png" alt="">
                 -->
@@ -57,5 +57,9 @@
 
     <script src="./assets/js/underscore-min.js"></script>
     <script src="./assets/js/juego.js"></script>
+    <script>
+        console.log(miModulo);
+        // miModulo.nuevoJuego();
+    </script>
 </body>
 </html>
