--- a/JS-guia/01-Fundamentos/app.html
+++ b/JS-guia/01-Fundamentos/app.html
@@ -10,7 +10,7 @@
   
     <!-- 
     <script src="./assets/js/ciclos/while-do-while.js"></script>-->
-    <script src="./assets/js/ciclos/for.js"></script>
+    <script src="./assets/js/classes/problema.js"></script>
 </body>
 </script>
 </html>
