--- a/JS-guia/03-webpack-inicial/src/index.html
+++ b/JS-guia/03-webpack-inicial/src/index.html
@@ -7,9 +7,11 @@
     <title>Webpack</title>
 </head>
 <body>
+    <!--
     <h1>
         Hola Mundo
-    </h1>
+    </h1> -->
+    <img src="assets/img//webpack-logo.png" alt="">
     <div id='app'>
 
     </div>
